--- a/UserManagement/UserManagement/Views/Account/Register.cshtml
+++ b/UserManagement/UserManagement/Views/Account/Register.cshtml
@@ -30,6 +30,27 @@
         </div>
     </div>
     <div class="form-group">
+        @Html.LabelFor(m => m.FName, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(m => m.FName, new { @class = "form-control" })
+        </div>
+    </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.LName, new { @class = "col-md-2 control-label" })
+            <div class="col-md-10">
+                @Html.TextBoxFor(m => m.LName, new { @class = "form-control" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.TimeOfRegistration, new { @class = "col-md-2 control-lable"})
+            <div class="col-md-10">
+                @Html.TextBoxFor(m => m.TimeOfRegistration, new { @class = "form-control"})
+            </div>
+        </div>
+        @*<div class="form-group">
+            @Html.HiddenFor(m => m.TimeOfRegistration)
+        </div>*@
+    <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" class="btn btn-default" value="Register" />
         </div>
